@@ -58,8 +58,8 @@ switch($type)
 			
 			for($i=1; $i<=date('t',$from); $i++)
 			{
-				$stats[$i]['upavg'] = $stats[$i]['upload']*8/1024/86400; //kbps
-				$stats[$i]['downavg'] = $stats[$i]['download']*8/1024/86400; //kbps
+				$stats[$i]['upavg'] = $stats[$i]['upload']*8/1000/86400; //kbit/s
+				$stats[$i]['downavg'] = $stats[$i]['download']*8/1000/86400; //kbit/s
 				
 				$listdata['upload'] += $stats[$i]['upload'];
 				$listdata['download'] += $stats[$i]['download'];
